@@ -17,6 +17,8 @@ Bugs fixed
 
 * LaTeX writer now generates correct markup for cells spanning multiple rows.
 * #1674: Do not crash if a module's ``__all__`` is not a list of strings.
+* On windows, make-mode didn't work on Win32 platform if sphinx was invoked as
+  ``python sphinx-build.py``.
 
 
 Release 1.3b2 (released Dec 5, 2014)
